--- a/index.html
+++ b/index.html
@@ -33,7 +33,15 @@
         
         <div class="navbar__s3" >
             <p>courses</p>
-            <p>My learning</p>
+            <!-- <p>My learning</p> -->
+             <div class="mylearning">
+                <p> My learning</p>
+                <div class="mylearning__popup">
+                    <p>You did not purchase anything yet</p>
+
+                </div>
+                </div>
+             </div>
             <i class="fa-solid fa-bag-shopping" style="color: #0a0a0a;"></i>
             <i class="fa-solid fa-bell" style="color: #0d0d0d;"></i>
             <i class="fa-solid fa-user" style="color: #0f0f10;"></i>
@@ -53,7 +61,11 @@
 
         <!--sale image-->
         <div class="sale-image">
-            <img src="./images/sale- image.jpg" alt="sale image">  
+            <img src="./images/sale- image.jpg" alt="sale image"> 
+             <div class="sale-image__offer">
+                <h2>udemy flash sale! 24 hours to save.</h2>
+                <p>Get the top Courses for just 499. Just one day to save but a lifetime to learn</p>
+             </div>
         </div>
 
         <!--Recommended-->
